# commented

./: .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: audit.yml  check.yml  ci.yml  lint_pr_title.yml
script/: Cargo.toml
script/src/: helix_languages_toml.rs  main.rs
src/: generated.rs  lib.rs  main.rs
