[package]
name = "commented"
version = "0.1.1"
edition = "2024"
description = "If you want to comment a line for an unknown file type, this crate is what you want"
rust-version = "1.85"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/commented"
keywords = ["comment", "no_std", "parser", "regex", "algorithm"]
categories = ["text-editors", "text-processing", "parsing", "no-std", "no-std::no-alloc"]
license = "MIT OR Apache-2.0"

[features]
glob = ["dep:globset"]

[workspace]
members = [".", "script"]
default-members = ["."]

[dependencies]
globset = { version = "0.4.16", optional = true }
