lints.workspace = true

[package]
name = "script"
version = "0.1.0"
edition = "2024"

[dependencies]
globset = "0.4.16"
heck = "0.5.0"
itertools = "0.14.0"
prettyplease = "0.2.36"
proc-macro2 = "1.0.96"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
syn = "2.0.104"
tap = "1.0.1"
toml = "0.9.5"
ureq = "3.0.12"
