lints.workspace = true

[package]
name = "script"
version = "0.1.0"
edition = "2024"

[dependencies]
globset = "0.4.16"
heck = "0.5.0"
itertools = "0.14.0"
prettyplease = "0.2.37"
proc-macro2 = "1.0.101"
quote = "1.0.41"
serde = { version = "1.0.228", features = ["derive"] }
syn = "2.0.106"
tap = "1.0.1"
toml = "0.9.7"
ureq = "3.1.2"
